--- a/project/pom.xml
+++ b/project/pom.xml
@@ -29,6 +29,11 @@
             <artifactId>lucene-queryparser</artifactId>
             <version>7.5.0</version>
         </dependency>
+        <dependency>
+            <groupId>org.jsoup</groupId>
+            <artifactId>jsoup</artifactId>
+            <version>1.11.3</version>
+        </dependency>
     </dependencies>
     <repositories>
         <repository>
